# distca

./: .gitignore  README.Installation.md  README.md  env.sh  envvars-mbz.sh  pretrain_llama.py  pretrain_llama.sh  requirements.txt  setup.py  train_3d.py
.github/workflows/: publish-pypi.yml
attn_server/: main.py
baseline/wlbllm_original/csrc/: CMakeLists.txt  bindings.cpp  memcpy.cu  wlb_memcpy.h
benchmarks/_250430_cpvstp/: cp_llama.py  cptime.py  playground.ipynb  plot.ipynb  tp_results.jsonl  tp_results2.jsonl  tptime.py  tptime2.py
benchmarks/_250501_torch_basic/: tp.py
benchmarks/_250507_attn_profile/: attn_profile.jsonl  attn_profile.py
benchmarks/_250511_zall_profile/: allreduce.plot.ipynb  attn_time.csv  mlp_profile.ipynb  mlp_profile.jsonl  mlp_runprofile.py
benchmarks/_250513_mlp_profile/: attn_matrix.npy  main.py  mlp.data.pkl  mlp_playground.ipynb  model.ipynb
benchmarks/_250514_attn_additive/: attn_additive.ipynb  attn_additive.py
benchmarks/_250514_attnprof/: attn_additive.py
benchmarks/_250517_formalize_prof_tools/: attn_perdoc.py  calc_latency.py  llama.py  utils.py
benchmarks/_250518_analyze_attn/: README.md  network_data.py
benchmarks/_250530_attn_mlp_pipeline/: profile_qwen3.ipynb
benchmarks/_250614_attndist/: attn-dist_multimodal-64k.psv  attn-dist_multimodal.psv  attn-time-dist.plot.py  attn-time-dist.run.py
benchmarks/_250614_wlbvsattnserver/: runsim.ipy  runsim_bruteforce_wlb_vs_attnserver.py  runsim_wlb_vs_attnserver.ipy.py
benchmarks/_250618_wlbattn_diff/: runsim_func.batch.2.ipy  runsim_func.batch.ipy  runsim_func.interactive.ipy  wlb_vs_attnserver_diff.psv
benchmarks/_250624_optimizer/: main.ipy.py
benchmarks/_250629_attn_prof_flashattn/: compute-attn-H100.0.psv  plot.ipy.py
benchmarks/_250629_new_simulator/: attn_time.csv  calculator.py  mlp_time.csv  nccl_perf.csv  test_timemodule.py  timemodule.py
benchmarks/_250629_solver_speed/: benchmark_lessvar.py  benchmark_lessvar_ordering.py  benchmark_mip.py
benchmarks/_250630_new_simulator2/: allgather_time.csv  allreduce_time.csv  attn_time.csv  example_usage.py  optimizer_attnserver.ipy.py  optimizer_wlbllm.ipy.py  test_allreduce_allgather_time.py  test_mlp_time.py  test_mlp_time_expanded.py  timemodule.py  wandb_optimizer.py  wandb_optimizer_attnserver_lessvar.py  wandb_optimizer_wlbllm.py  zrun_wandb_optimizer_gaussian.py  zrun_wandb_optimizer_wlbdocs.py
benchmarks/_250706_wandb_post_analysis/: main.py  main2.py
benchmarks/_250729_benchmark_2cp/: algorithm_v1_more_debuggable.py  algorithm_v2_more_condensed.py
benchmarks/_250808_baseline_megatron/: test_e2e_base.bak.1.py  test_e2e_baseline.bak.1.py  test_e2e_baseline.bak.2.py
benchmarks/_250809_e2e_benchmark/: hostfile  test_e2e_combined.sh  test_e2e_combined.v3.sh
benchmarks/_250811_attention_again/: out.details.txt  out.with-deterministic.txt  test_flash_attn_varlen.py
benchmarks/_250813_simulator_simple/: balance.ipy.py  sim.py  sim_pp_wlb.py
benchmarks/_250813_stream/: main.py
benchmarks/_250817_new_workloads/: new_dist.ipy.py  wlbllm_heuristic_varlen_packing.py
benchmarks/_250818_crossnode_network/: all_gather.N2.txt  main.py  run.sh
benchmarks/_250819_attnvslinear/: attn_linear_breakpoint.ipy.py
benchmarks/_250821_calc_bw/: main.py  main2.py  ray_launch.py  test_all2all.py
benchmarks/_250822_cp_elongate/: datadist.ipy.py  main.py  main2.py  result.md  run.sh
benchmarks/_250823_complete_simulation/: sim.py  sim.v1.py
benchmarks/_250823_debug_mlp_layout/: main.ipy.py
benchmarks/_250824_buffersizedebug/: main.ipy.py
benchmarks/_250825_simulator_simple/: debug_sim_pp_d2.py  sim.py  sim_pp.py  (+2 more)
benchmarks3/: .gitignore
csrc/: CMakeLists.txt
csrc/bindings/: all_to_all.cpp  all_to_all.h  bindings.cpp  nvshmem.cpp
csrc/core/: fastalltoall.cu  fastalltoall.h  in_place_attn_switch.cu  in_place_attn_switch.h  memcpy.cu  memcpy.h
csrc/wlb_memcpy/: CMakeLists.txt  bindings.cpp  memcpy.cu  registration.h  wlb_memcpy.h
d2/: mem.py  ray_launch.py
distca/: mem.py
playground/: .gitignore  attn_worker.py  pretrain_gpt.sh  pretrain_llama.sh  test_distca.py  test_distca.sh  test_fa.py  test_megatron_e2e_pipeline_combined.py  test_megatron_e2e_pipeline_combined.sh  test_megatron_init.py  test_megatron_init.sh  test_ray_nsys.py  test_vocab.py
profiling/: transformer-prof.py
setup/: setup_d2.sh  setup_nvcr_base.sh  setup_sqsh.sh
simulation/: simulate_datagen.ipynb  simulator.py  simulator_junda.py
simulator/: README.md  data_generator.py  data_validate.ipynb  run.py  simulator.py  simulator_new_playground.py  simulator_old.py
src/: attn_worker.py  inplace_metadata.py
tests/: .gitignore  analyze_status.py  bind_and_exec.sh  global_batch_provider.py  megatron_test_utils.py  redirect_log.sh  test_attn_worker.py  test_combined.md  test_comm_metadata.py  test_comm_metadata_2cp.py  test_comm_metadata_balanced_flops.py  test_create_pp_microbatch_simple.py  test_d2_e2e.py  test_d2_e2e_normal.py  test_dispatch_fast.py  test_dispatch_fast_2cp.py  test_dispatch_fast_balanced_flops.py  test_dispatch_fast_balanced_flops.txt  test_dispatch_qkv.py  test_e2e_anchor.py  test_e2e_base.py  test_e2e_baseline.py  test_e2e_combined.group.sh  test_e2e_combined.multi.sh  test_e2e_combined.onesrun.examples.sh  test_e2e_combined.onesrun.sh  test_e2e_combined.py  test_e2e_combined.ray.sh  test_e2e_combined.salloc-exp.sh  test_e2e_combined.salloc.mem.v2.sh  test_e2e_combined.salloc.sh  test_e2e_combined.sbatch.sh  test_e2e_combined.slurm.sh  test_e2e_d2.py  test_fa2a_metadata.py  test_fa2a_metadata_2cp.py  test_fa2a_metadata_balanced_flops.py  test_fa2a_ops.py  test_items.py  test_megatron_e2e.py  (+39 more)
(+1579 files in other folders)
